# theta

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SLURM_INTEGRATION_PLAN.md  SLURM_INTEGRATION_PROGRESS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: prometheus.yml
deploy/jobstats/: theta-epilog.sh  theta-prolog.sh  theta_rtheta.rules.yml
deploy/slurm/: SETUP.md
research/classifier/: classifier_compare.py
research/sensitivity/: sensitivity.py
research/survival/: leadtime.py
sim/: README.md  __init__.py
sim/elt/: __init__.py  analysis.py  degradation.py  detector.py  experiment.py  params.py  run_elt.py  thermal_model.py  validate.py
sim/tests/: test_elt.py
tests/: sim_ai_factory.py  test_alerters_oncall.py  test_causal_tiers.py  test_coolant_tref.py  test_daemon_jobtracker.py  test_dcgm_collector.py  test_device_caps.py  test_fleet_scan.py  test_governor.py  test_h100_reference.py  test_health_conditions.py  test_incident_store.py  test_integrity.py  test_job_tracker.py  test_jobreport.py  test_otlp_exporter.py  test_partner_report.py  test_peer.py  test_power_sanity.py  test_rate_tracker.py  test_rocm_collector.py  test_rtheta_curve.py  test_signature.py  test_slurm_hooks.py
thermalos/: __init__.py  cli.py  wizard.py
thermalos/agent/: alerter.py  exporter.py
theta/: cli.py  mcp_server.py  wizard.py
theta/agent/: alerter.py  baseline.py  calibrate.py  causal.py  collector.py  daemon.py  dcgm_collector.py  detector.py  device_caps.py  exporter.py  fault_classifier.py  governor.py  h100_reference.py  hal.py  (+20 more)
tools/: analyze_b200_baseline.py  collect_b200_baseline.py  discovery_tracker.py  signature_princeton.py  validate_e009_princeton.py
(+2 files in other folders)
