[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thermalos"
version = "0.1.2"
description = "GPU thermal-power forensics agent. Computes R_theta = ΔT/P in real time."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "nvidia-ml-py>=12.0.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "typer>=0.12",
    "rich>=13.0",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "structlog>=24.0",
    "joblib>=1.3",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
thermalos = "thermalos.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["thermalos"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
